# specbridge

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.deploy/: .credentials.env  README.md  __init__.py  deploy.env  fabfile.py  requirements.txt
.deploy/scripts/: get_github_app_token.py
.superdesign/: design-system.md
.superdesign/init/: components.md  layouts.md  pages.md  routes.md  theme.md
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
agents/: admin.py  api.py  models.py  services.py  tests.py
agents/migrations/: 0001_initial.py  0002_initial.py  0002_remove_agentsuggestion_related_section_key.py  0003_agentsuggestion_related_document_and_more.py
alignment/: admin.py  api.py  apps.py  models.py  services.py  stream_attachments.py  tests.py
alignment/migrations/: 0001_initial.py  0002_initial.py  0002_remove_blocker_related_section_key_and_more.py  0003_blocker_related_document_decision_related_document_and_more.py  0003_streamattachment.py  0004_streampost_concern.py  (+1 more)
exports/: admin.py  api.py  models.py  services.py  tests.py  views.py
projects/: admin.py  api.py  context_processors.py  demo.py  invitations.py  languages.py  models.py  services.py  tests.py  urls.py  views.py
specbridge/: api.py  asgi.py  env.py  settings.py  urls.py  wsgi.py
specs/: admin.py  api.py  concerns.py  consistency.py  models.py  openai.py  section_ai.py  services.py  spec_document.py  tests.py
templates/: base.html
(+54 files in other folders)
