[project]
name = "specbridge"
version = "0.1.0"
description = "Collaborative, agent-driven product spec platform built with Django and Django Ninja."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyJWT[crypto]>=2.8,<3",
    "Django>=5.2,<5.3",
    "fabric>=3,<4",
    "django-ninja>=1.4,<1.5",
    "django-ses>=4.4,<5",
    "dj-database-url>=2.3,<3",
    "gunicorn>=23,<24",
    "invoke>=2,<3",
    "python-dotenv>=1,<2",
    "requests>=2,<3",
    "whitenoise>=6.9,<7",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
